# recard

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Lexicard_TODO.md  README.md  app.py  final_all_tests.txt  final_all_tests_cov.txt  final_all_tests_v10.txt  final_all_tests_v11.txt  final_all_tests_v2.txt  final_all_tests_v3.txt  final_all_tests_v4.txt  final_all_tests_v5.txt  final_all_tests_v6.txt  final_all_tests_v7.txt  final_all_tests_v8.txt  final_all_tests_v9.txt  profile_debug.txt  pyproject.toml  single_debug.txt  start_server.py  ui_basic_long.txt  ui_basic_s.txt  ui_pages_long.txt  ui_test_basic_debug.txt  ui_test_debug.txt  unauthorized_debug.txt
.nicegui/: storage-user-28e111f1-f44d-4a0b-8762-5bb9734b8632.json  storage-user-86076c21-6aba-4bfa-80f8-bc6885fc19e7.json
assets/: decxample.xlsx
lexicard/: __init__.py  auth.py  front_commons.py  main.py  models.py  page_about.py  page_blank.py  page_deck.py  page_home.py  page_mode_audio.py  page_mode_missing.py  page_mode_multi.py  page_mode_single.py  page_profile.py  probbucket.py
lexicard/.nicegui/: storage-user-c3f921d1-0753-4a69-8578-06367fea4761.json
skills/PR-creation/: SKILL.md
skills/code-review/: SKILL.md
skills/document-skills/docx/ooxml/scripts/validation/: base.py
skills/document-skills/docx/scripts/: document.py  utilities.py
skills/document-skills/pdf/scripts/: fill_fillable_fields.py
skills/document-skills/pptx/ooxml/scripts/validation/: docx.py  pptx.py
skills/document-skills/pptx/scripts/: inventory.py  replace.py
skills/document-skills/xlsx/: recalc.py
skills/webapp-testing/scripts/: with_server.py
structscrap/: auth.py  deck_data.json  front_commons.py  main.py  models2.py  page_about.py  page_blank.py  page_deck.py  page_home.py  page_mode_audio.py  page_mode_missing.py  page_mode_multi.py  page_mode_single.py  page_profile.py  probbucket.py  test_app.py
tests/: test_logic_extended.py  test_models.py  test_probbucket.py  test_ui_basic.py  test_ui_multi.py  test_ui_pages.py  test_ui_placeholder.py
