[project]
name = "lexicard"
version = "0.1.0"
description = "Loads a list of Thai words and idioms and let the user configure and play flashcards."
authors = [
    {name = "faillery"},
    {name = "แรช"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "nicegui (>=3.5.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true


[project.urls]
Homepage = "https://example.com/lexicard"
Repository = "https://github.com/geebee101/lexicard.git"
"Bug Reports" = "https://github.com/geebee101/lexicard/issues"

[tool.pytest]
# section for nicegui see: https://nicegui.io/documentation/section_testing
asyncio_mode = auto
main_file = app.py
addopts = -p nicegui.testing.user_plugin

https://github.com/zauberzeug/nicegui/tree/main/examples/pytests

[tool.pytest.ini_options]
addopts = [
    "--cov=lexicard",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85",
]
testpaths = ["tests"]


# .end